# personal-gmail-genie

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  gmail_genie.py  gmail_genie_launcher.sh  justfile  llm_action_system_prompt.txt  main.py  ml_action_model.example.json  pyproject.toml  requirements.txt  rules.example.json  run_background.sh  skills-lock.json  todo.md
gcloud-scheduled-jobs/: .env.local.example  justfile  start.sh
gcloud-scheduled-jobs/scripts/: 10-enable-apis.sh  20-create-service-accounts.sh  30-create-artifact-registry.sh  40-create-secrets.sh  50-sync-local-secrets.sh  60-build-and-push-image.sh  70-deploy-job.sh  80-create-scheduler-job.sh  90-run-job-now.sh  95-tail-logs.sh  96-view-logs.sh  lib.sh
macOS-scheduler/: gmail_genie_launcher.sh
