[project]
name = "gmail-genie"
version = "0.1.0"
description = "A Gmail assistant that automates email management based on user-defined rules."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "google-api-python-client==2.193.0",
    "google-auth-oauthlib==1.3.1",
    "httpx==0.28.1",
    "openai==2.30.0",
    "pydantic==2.12.5",
    "resend>=2.27.0",
    "rich==14.3.3",
]

[tool.uv]
package = false
